--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <div class="col-4">
           <img src="images/product-2.jpg" alt="" />
-          <h4>Red Printed T-shirt</h4>
+          <h4>Red Printed T-shoes</h4>
           <div class="rating">
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
