--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </button>
                 </form>
             </li>
-              <li><a href="index.html">Home</a></li>
+              <li><a href="index.html">kalpesh</a></li>
               <li><a href="products.html">Products</a></li>
               <li><a href="">About</a></li>
               <li><a href="">Contact</a></li>
